--- a/Assets/Scripts/Input/Scripts/Input.asmdef
+++ b/Assets/Scripts/Input/Scripts/Input.asmdef
@@ -2,7 +2,8 @@
     "name": "Input",
     "rootNamespace": "",
     "references": [
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:43502808343d14d42a4d8f422431a8b5"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
