--- a/Assets/Scripts/Input/Scripts/Input.asmdef
+++ b/Assets/Scripts/Input/Scripts/Input.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:43502808343d14d42a4d8f422431a8b5"
+        "GUID:43502808343d14d42a4d8f422431a8b5",
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
