--- a/Assets/Scripts/SaveData/SaveData.asmdef
+++ b/Assets/Scripts/SaveData/SaveData.asmdef
@@ -2,7 +2,8 @@
     "name": "SaveData",
     "rootNamespace": "",
     "references": [
-        "GUID:43502808343d14d42a4d8f422431a8b5"
+        "GUID:43502808343d14d42a4d8f422431a8b5",
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
